Detective v0.4.1 investigation UI polish